2015-02-28  Jamison Hope  <jrh@theptrgroup.com>

	* ArrayRef.java (arrayRef): Set setter property to ArraySet.arraySet.

2015-02-28  Per Bothner  <per@bothner.com>

	* CompileMisc.java: Remove unneeded call to code.emitTryEnd.

2015-02-26  Per Bothner  <per@bothner.com>

	* MakeSplice.java: Support splicing of CharSequences.

	* Map.java: Generailize to list arguments to "sequence-like" values.
	(map1, forEach1): Add overloads - one version requires LList,
	the other general sequences.
	(applyN): Re-written to work with general sequences.

2015-02-24  Per Bothner  <per@bothner.com>

	* MultiplyOp.java (2-argument apply): Handle non-Numeric numbers.
	(combine): New helper function.

2015-02-17  Per Bothner  <per@bothner.com>

	* Map.java: Use Scheme-written optimizer for map.
	* CompileMisc.java (validateApplyMap): Removed.

2015-02-14  Per Bothner  <per@bothner.com>

	* Map.java: Use Scheme-written optimizer for for-each.

2015-01-30  Per Bothner  <per@bothner.com>

	* CompileMisc.java (validateApplyConvert): Don't apply previous
	"simplification" if value type is nullType.

2015-01-29  Per Bothner  <per@bothner.com>

	* CompileMisc.java (validateApplyConvert): If expression type is
	compatible without-coercion with type, just use expression.
	That provides a more precise type.

2015-01-26  Per Bothner  <per@bothner.com>

	* CompileMisc.java (validateApplyCallCC): Set DONT_COPY flag.

2015-01-21  Per Bothner  <per@bothner.com>

	* CompileMisc.java (validateApplyValuesMap, validateApplyCallCC):
	Use new 2-argument setInlineOnly.

2015-01-11  Per Bothner  <per@bothner.com>

	* CompileMisc.java (validateApplyAppendValues): If constant-folding
	returns no values, return QuoteExp.voidObjectExp.
	This avoids warning about using void-valued expression.

2015-01-09  Andrea Bernardini <andrebask@gmail.com>

	* GetNamedPart.java (getMemberPart): Minor generalization.

2014-12-17  Per Bothner  <per@bothner.com>
